--- a/style.css
+++ b/style.css
@@ -240,9 +240,11 @@ main{
 }
 #section1{
     display: flex;
+    flex-wrap:wrap;
     justify-content: space-evenly;
 }
 #sectionCard{
+    margin-top:1rem;
     height: 420px;
     width: 350px;
     border:transparent;
